--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400&family=DM+Sans:wght@300;400;500&family=Source+Sans+3:wght@300;400;500&display=swap&Source+Sans+3:wght@300;400;500&family=Space+Mono&display=swap&family=Inter:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400&family=DM+Sans:wght@300;400;500&family=Source+Sans+3:wght@300;400;500&display=swap&Source+Sans+3:wght@300;400;500&family=Space+Mono&display=swap&family=Inter:wght@300;400;500&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
 :root {
-  --primary-dark: #1A2531;
-  --primary-dark-hover: #27313C;
-  --secondary: #c5c5c5;
+  --primary-dark: #fefaf5;
+  --primary-dark-hover: #f0bb78;
+  --secondary: #131010;
   --secondary-translucent: #c5c5c55c;
 
-  --accent: #FFF4BC;
-  --accent-hover: #F8E9A1;
+  --accent: #f0bb78;
+  --accent-hover: #543a14;
 
-  --light: #f2f2f2;
+  --light: #543a14;
   --dark: #363538;
 }
 
@@ -34,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Epilogue", sans-serif;
+  font-family: "ABeeZee", sans-serif;
   line-height: 1.2;
 }
 
@@ -114,7 +114,6 @@ figcaption {
   }
 }
 
-
 .text-large {
   font-size: large;
 }
@@ -132,8 +131,6 @@ figcaption {
   top: 0px;
   padding: 20px 0px;
 }
-
-
 
 .display-card {
   padding: 15px;
@@ -165,19 +162,16 @@ figure {
   border: var(--primary-dark-hover) 2px solid;
 }
 
-
-
 @media (min-width: 768px) {
-  .card-section:hover>div>section {
+  .card-section:hover > div > section {
     opacity: 0.5;
   }
 
-  .card-section:hover>div>section:hover {
+  .card-section:hover > div > section:hover {
     background-color: var(--primary-dark-hover);
-    opacity: 1.0;
+    opacity: 1;
   }
 }
-
 
 .intro-section {
   min-height: 70vh;
@@ -212,8 +206,6 @@ figure {
   background-color: var(--accent-hover);
 }
 
-
-
 /* TABS */
 .tab-container {
   margin-top: 5px;
@@ -237,7 +229,7 @@ figure {
 }
 
 .tab-link::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   transform: scaleX(0);
@@ -259,10 +251,6 @@ figure {
   color: var(--accent);
 }
 
-
-
-
-
 /* LINK ANIMATION */
 .link {
   color: var(--light);
@@ -279,7 +267,7 @@ figure {
 }
 
 .link::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   transform: scaleX(0);
@@ -295,9 +283,6 @@ figure {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
-
-
-
 
 /* Animation for modal fade-in */
 @keyframes fadeIn {
